# netlib

./: .gitignore  CMakeLists.txt  README.md
netlib/: CMakeLists.txt  netlibConfig.cmake.in
netlib/include/: netlib.h
netlib/include/netlib/: connect_operation.h  fdops.h  loop.h  read_operation.h  recv_operation.h  write_operation.h
netlib/src/: connect_operation.cpp  fdops.cpp  loop.cpp  read_operation.cpp  recv_operation.cpp  write_operation.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_netlib.cpp
